Actualizacion pre entrega

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./img/maradona-imagen.ico">
     <link rel="stylesheet" href="./estilos/estilos.css">
-    <title>practica simulador</title>
+    <title>Recordemos a Diego de la mejor manera</title>
 </head>
 <body>
     <div class="container">
